# cloudknot

./: .buildinfo  .coveragerc  .doctr-files  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pyup.yml  .travis.yml  .zenodo.json  CHANGES.rst  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.rst  appveyor.yml  documentation.html  faq.html  genindex.html  getting_started.html  github_deploy_key.enc  index.html  objects.inv  paper.bib  paper.md  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/: config.yml
.github/workflows/: create-github-release.yml  docbuild.yml  publish-to-test-pypi.yml  pythonpackage.yml  test.yml
.maintenance/: publish_release.sh  update_changes.sh  update_zenodo.py
_modules/: index.html
_modules/cloudknot/: cloudknot.html  config.html  dockerimage.html
_modules/cloudknot/aws/: base_classes.html  batch.html  ec2.html  ecr.html  iam.html
_sources/: faq.rst.txt  getting_started.rst.txt  index.rst.txt
_sources/api/: aws.rst.txt
_sources/api/_autosummary/: cloudknot.aws.BatchJob.rst.txt  cloudknot.aws.CannotCreateResourceException.rst.txt  cloudknot.aws.CannotDeleteResourceException.rst.txt  cloudknot.aws.ComputeEnvironment.rst.txt  cloudknot.aws.DockerRepo.rst.txt  cloudknot.aws.IamRole.rst.txt  cloudknot.aws.JobDefinition.rst.txt  cloudknot.aws.JobQueue.rst.txt  cloudknot.aws.RegionException.rst.txt  cloudknot.aws.ResourceClobberedException.rst.txt  cloudknot.aws.ResourceDoesNotExistException.rst.txt  cloudknot.aws.ResourceExistsException.rst.txt  cloudknot.aws.SecurityGroup.rst.txt  cloudknot.aws.Vpc.rst.txt  cloudknot.aws.get_profile.rst.txt  cloudknot.aws.get_region.rst.txt  cloudknot.aws.get_s3_bucket.rst.txt  cloudknot.aws.get_s3_params.rst.txt  cloudknot.aws.list_profiles.rst.txt  cloudknot.aws.refresh_clients.rst.txt  cloudknot.aws.set_profile.rst.txt  cloudknot.aws.set_region.rst.txt  cloudknot.aws.set_s3_bucket.rst.txt  cloudknot.aws.set_s3_params.rst.txt
_static/: basic.css  collapsible.css
api/: aws.html  config.html
api/_autosummary/: cloudknot.aws.BatchJob.html  cloudknot.aws.CannotCreateResourceException.html  cloudknot.aws.CannotDeleteResourceException.html  cloudknot.aws.ComputeEnvironment.html  cloudknot.aws.DockerRepo.html  cloudknot.aws.IamRole.html  cloudknot.aws.JobDefinition.html  cloudknot.aws.JobQueue.html  cloudknot.aws.RegionException.html  cloudknot.aws.ResourceClobberedException.html  cloudknot.aws.ResourceDoesNotExistException.html  cloudknot.aws.ResourceExistsException.html  cloudknot.aws.SecurityGroup.html  cloudknot.aws.Vpc.html  cloudknot.aws.get_profile.html  cloudknot.aws.get_region.html  cloudknot.aws.get_s3_bucket.html  cloudknot.aws.get_s3_params.html  cloudknot.aws.list_profiles.html  cloudknot.aws.refresh_clients.html  cloudknot.aws.set_profile.html  cloudknot.aws.set_region.html  cloudknot.aws.set_s3_bucket.html  cloudknot.aws.set_s3_params.html
cloudknot/: Dockerfile.template  __init__.py  _meta.py  aws_utils.py  cli.py  cloudknot.py  config.py  dockerimage.py  header.py.txt  script.template  version.py
cloudknot/aws/: __init__.py  base_classes.py  batch.py  ec2.py  ecr.py  iam.py
cloudknot/commands/: __init__.py  base.py  configure.py
cloudknot/data/config_ref_data/: test_add_resource.cfg  test_remove_resource.cfg
cloudknot/data/docker_image_ref_data/ref1/: Dockerfile
cloudknot/data/docker_image_ref_data/ref2/: Dockerfile
cloudknot/data/docker_reqs_ref_data/ref2/: test_func_input.py
cloudknot/data/profiles_ref_data/: cloudknot_with_profile  cloudknot_without_profile  config  credentials_with_default  credentials_without_default
cloudknot/templates/: Dockerfile.template  batch-environment-gpu-increase-ebs-volume.template  batch-environment-increase-ebs-volume.template  batch-environment.template  pars-with-default-vpc.template  pars-with-new-vpc.template  script.template
cloudknot/tests/: __init__.py  test_aws.py  test_cloudknot.py  test_cloudknot_dockerimage.py  test_config.py  test_docker_image.py  test_dockerimage.py  test_knot.py  test_pars.py
doc/: Makefile  api.rst  conf.py  documentation.rst  example_config.txt  example_credentials.txt  faq.rst  getting_started.rst  index.rst  minimal_permissions.txt
doc/_static/: custom.css
doc/_templates/: page.html
doc/_templates/autosummary/: class.rst  function.rst  module.rst
doc/api/: aws.rst  config.rst
doc/sphinxext/: github.py
examples/: 00_random_matrix_vector_multiply.ipynb  01_a_bunch_of_hellos.ipynb  02_process_mri_data.ipynb  03_write_to_s3_bucket.ipynb  04_using_dockerimage.ipynb  05_using_gpus.ipynb  README.md  a_bunch_of_hellos.ipynb  process_mri_data.ipynb  using_dockerimage.ipynb  using_knot.ipynb  write_to_s3_bucket.ipynb
examples/model_fitting/: README.txt  plot_function_fit.py  plot_function_stability.py
examples/scipy-2018-paper-examples/: benchmark_mri_pipeline.ipynb  monte_pi.ipynb
paper/: paper.bib  paper.md
scripts/: Figure1.ipynb
(+18 files in other folders)
