[project]
name = "cloudknot"
dynamic = ["version"]
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Adam Richie-Halford", email = "richiehalford@gmail.com" }]
maintainers = [
    { name = "Adam Richie-Halford", email = "richiehalford@gmail.com" },
]
description = "Cloudknot: a python library designed to run your existing python code on AWS Batch"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "awscli>=1.32.60,<2",
    "boto3>=1.34.66,<2",
    "botocore>=1.34.65,<2",
    "cloudpickle>=3.0.0,<4",
    "docker>=7.0.0,<8",
    "pipreqs>=0.4.13,<0.5",
    "tenacity>=8.2.3,<9",
]

[project.urls]
"Homepage" = "https://nrdg.github.io/cloudknot"
"Source" = "https://github.com/nrdg/cloudknot"

[project.optional-dependencies]
dev = [
    "black>=23.7.0,<24",
    "coverage>=7.4,<8",
    "flake8>=7.0.0,<8",
    "moto[cloudformation]==4.1.5",
    "numpydoc>=1.6.0,<2",
    "pre-commit>=3.6.2,<4",
    "pydocstyle>=6.3.0,<7",
    "pytest-cov>=4.1.0,<5",
    "pytest-xdist[psutil]==2.1.0",
    "pytest>=8.0.0,<9",
    "sphinx>=5.3.0,<6",
]
maint = ["rapidfuzz>=3.6.2,<4"]
examples = ["ipykernel>=6.29.3,<7", "numpy>=1.26.4,<2"]

[project.scripts]
cloudknot = "cloudknot.cli:main"

[build-system]
requires = ["setuptools>=69.1.0", "wheel>=0.43.0", "setuptools_scm>=8.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.package-data]
cloudknot = ["data/**", "templates/*"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
norecursedirs = "cloudknot/data"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
extend-exclude = '''
(
	/(
		\.eggs         # exclude a few common directories in the
		| \.git          # root of the project
		| \.github
		| \.idea
		| \.ipynb_checkpoints
		| \.hg
		| \.pytest_cache
		| \.tox
		| \.venv
		| cloudknot/data
		| cloudknot.egg-info
		| examples
		| doc
		| build
		| dist
	)/
	| _version.py
	| cli.py
)
'''

[tool.pydocstyle]
convention = "numpy"
match = "(?!_version).*\\.py"
match-dir = "cloudknot"
