[aliases]
test = pytest

[tool:pytest]
addopts = --doctest-modules
norecursedirs = cloudknot/data

[metadata]
name = cloudknot
url = https://nrdg.github.io/cloudknot
download_url = https://github.com/nrdg/cloudknot
author = Adam Richie-Halford
author_email = richiehalford@gmail.com
maintainer = Adam Richie-Halford
maintainer_email = richiehalford@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

license = MIT
description = Cloudknot: a python library designed to run your existing python code on AWS Batch
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent

[options]
setup_requires =
  setuptools_scm
python_requires = >=3.6
install_requires =
    awscli
    boto3>=1.5.21
    botocore>=1.8.36
    cloudpickle
    docker>=3.0.0
    pipreqs>=0.4.11
    tenacity>=6.3.0
zip_safe = False
include_package_data = True
packages = find:

[options.package_data]
cloudknot = data/*, data/*/*, data/*/*/*, data/*/*/*/*, templates/*

[options.entry_points]
console_scripts =
    cloudknot = cloudknot.cli:main

[options.extras_require]
dev =
    black==23.7.0
    coverage==5.3
    flake8==3.8.3
    numpydoc==1.1.0
    moto==4.1.13
    pre-commit==3.3.3
    pydocstyle==5.1.1
    pytest-cov==2.10.1
    pytest-xdist[psutil]==2.1.0
    pytest==6.0.1
    sphinx==3.2.1
maint =
    rapidfuzz==0.12.2

[pydocstyle]
convention = numpy
match = (?!_version).*\.py
match-dir = cloudknot

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
ignore = E501,N802,N806,W503,E203
exclude = setup.py,build,dist,doc,examples,cloudknot/data,cloudknot/_version.py,cloudknot/cli.py
